ATalkPass2Parser.java
// Generated from ATalkPass2.g4 by ANTLR 4.7

      import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ATalkPass2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, CONST_NUM=38, 
		CONST_CHAR=39, CONST_STR=40, NL=41, ID=42, COMMENT=43, WS=44;
	public static final int
		RULE_program = 0, RULE_actor = 1, RULE_state = 2, RULE_receiver = 3, RULE_type = 4, 
		RULE_block = 5, RULE_statements = 6, RULE_statement = 7, RULE_stm_vardef = 8, 
		RULE_stm_tell = 9, RULE_stm_write = 10, RULE_stm_if_elseif_else = 11, 
		RULE_stm_foreach = 12, RULE_stm_quit = 13, RULE_stm_break = 14, RULE_stm_assignment = 15, 
		RULE_expr = 16, RULE_expr_assign = 17, RULE_expr_or = 18, RULE_expr_or_tmp = 19, 
		RULE_expr_and = 20, RULE_expr_and_tmp = 21, RULE_expr_eq = 22, RULE_expr_eq_tmp = 23, 
		RULE_expr_cmp = 24, RULE_expr_cmp_tmp = 25, RULE_expr_add = 26, RULE_expr_add_tmp = 27, 
		RULE_expr_mult = 28, RULE_expr_mult_tmp = 29, RULE_expr_un = 30, RULE_expr_mem = 31, 
		RULE_expr_mem_tmp = 32, RULE_expr_other = 33;
	public static final String[] ruleNames = {
		"program", "actor", "state", "receiver", "type", "block", "statements", 
		"statement", "stm_vardef", "stm_tell", "stm_write", "stm_if_elseif_else", 
		"stm_foreach", "stm_quit", "stm_break", "stm_assignment", "expr", "expr_assign", 
		"expr_or", "expr_or_tmp", "expr_and", "expr_and_tmp", "expr_eq", "expr_eq_tmp", 
		"expr_cmp", "expr_cmp_tmp", "expr_add", "expr_add_tmp", "expr_mult", "expr_mult_tmp", 
		"expr_un", "expr_mem", "expr_mem_tmp", "expr_other"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'actor'", "'<'", "'>'", "'end'", "','", "'receiver'", "'('", "')'", 
		"'char'", "'['", "']'", "'int'", "'begin'", "'='", "'sender'", "'self'", 
		"'<<'", "'write'", "'if'", "'elseif'", "'else'", "'foreach'", "'in'", 
		"'quit'", "'break'", "'or'", "'and'", "'=='", "'<>'", "'+'", "'-'", "'*'", 
		"'/'", "'not'", "'{'", "'}'", "'read'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "CONST_NUM", "CONST_CHAR", "CONST_STR", "NL", "ID", "COMMENT", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ATalkPass2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    void print(String str){
	        System.out.println(str);
	    }

	    void beginScope() {
	        SymbolTable.push();
	    }

	    void endScope() {
	        print("Stack offset: " + SymbolTable.top.getOffset(Register.SP) + ", Global offset: " + SymbolTable.top.getOffset(Register.GP));
	        SymbolTable.pop();
	    }

	    Type printErrAndAssignNoType(String msg){
	      print(msg);
	      return new NoType();
	    }

	    Type checkArithOperandValidation(Type tp)throws ArithmaticsOperandsException{
	      if(!tp.equals(new IntType()))
	        throw new ArithmaticsOperandsException();
	      else
	        return tp;
	    }

	    Type assignExprType_tmp (Type tp, String msg) {
	      try {
	        return checkArithOperandValidation(tp);
	      } catch(ArithmaticsOperandsException ex) {
	        return printErrAndAssignNoType(msg);
	      }
	    }

	    Type checkCombinedArithExprTypes(Type tp1,Type tp2)throws ArithmaticsOperandsException{
	      if((!tp1.equals(new IntType())) && (!tp2.equals(new NoType())))
	       throw new ArithmaticsOperandsException();
	     else
	       return tp1;
	   }

	    Type assignExprType(Type tp1, Type tp2, String msg) {
	      try {
	        return checkCombinedArithExprTypes(tp1, tp2);
	      } catch(ArithmaticsOperandsException ex) {
	        return printErrAndAssignNoType(msg);
	      }
	    }

	    Type getIDFromSymTable(String idName, int line) {
	      SymbolTableItem item = SymbolTable.top.get(idName);
	      if(item == null)
	        return printErrAndAssignNoType(line + ") Item " + idName + " doesnt exist.");
	      else {
	        SymbolTableVariableItemBase var = (SymbolTableVariableItemBase) item;
	        print(line + ") Variable " + idName + " used.\t\t" +   "Base Reg: " + var.getBaseRegister() + ", Offset: " + var.getOffset());
	        return var.getVariable().getType();
	      }
	    }

	    SymbolTableItemReceiver getRecieverFromSymTable(String name, int line) throws ReceiverDoseNotExistsException{
	      SymbolTableItem item = SymbolTable.top.get(name);
	      if(item == null)
	        throw new ReceiverDoseNotExistsException();
	      SymbolTableItemReceiver var = (SymbolTableItemReceiver) item;
	      /* print(line + ") Reciever " + name + " used.\t\t"); */
	      return var;
	    }

	    SymbolTableItemActor getActorFromSymTable(String name, int line)throws ActorDoesntExistsException{
	      SymbolTableItem item = SymbolTable.top.get(name);
	      if(item == null)
	        throw new ActorDoesntExistsException();
	      SymbolTableItemActor var = (SymbolTableItemActor) item;
	      /* print(line + ") Reciever " + name + " used.\t\t"); */
	      return var;
	    }

	    int checkAndFindNumOfItemsInExplitArray(Type tp1,Type tp2, int size) {
	      if(!tp2.equals(tp1))
	        size = -1;
	      else if(size != -1)
	        size ++;
	      return size;
	    }

	    Type assignExplitArrayType(int size, Type tp) {
	      if(size != -1)
	        return new ArrayType(size, tp);
	      else
	        return printErrAndAssignNoType("Invalid combination for a array type.");
	    }

	    Type checkEqualityExprType_tmp(Type tp1, Type tp2) {
	      if(tp1.equals(tp2) || tp2.equals(new NoType()))
	        return tp1;
	      else
	        return printErrAndAssignNoType("Incompatible types for checking equality.");
	    }

	    Type checkEqualityExprType(Type tp1, Type tp2) {
	      if(tp1.equals(tp2))
	        return new IntType();
	      else if(tp2.equals(new NoType()))//NOTE: notype & notype is not handled?
	        return tp1;
	      else
	        return printErrAndAssignNoType("Incompatible types for checking equality.");
	    }

	    Type assignAssignmentExprType(Type tp1, Type tp2) {
	      if(tp1.equals(tp2))
	        return tp1;
	      else
	        return printErrAndAssignNoType("Invalid assignment.");
	    }

	    void checkIterationExpr(String id, int line, Type tp){
	      try{
	      Type t = getIDFromSymTable(id, line);
	      tp = tp.dimensionAccess(1);
	      if(!t.equals(new NoType()))
	        printErrAndAssignNoType("variable <" + id + "> already declared in this scope.");
	      }catch(UndefinedDemensionsException ex){
	        printErrAndAssignNoType("Undefined demensions.");
	      }
	    }

	    void checkWriteFuncArgument(Type tp){
	      try{
	        if(!(tp.equals(new IntType()) || tp.equals(new CharacterType())))
	          if(tp.dimensionAccess(1).equals(new CharacterType()))
	            printErrAndAssignNoType("Invalid argument for function <write>.");
	      }catch(UndefinedDemensionsException ex){
	        printErrAndAssignNoType("Invalid argument for function <write>.");
	      }
	    }

	    String makeKey(String actr, String rcvr, ArrayList<Type> argumentTypes){
	      String key = actr + ": " + rcvr + " (";
	  		for (int i = 0; i < argumentTypes.size(); i++){
	  			key += argumentTypes.get(i).toString();
	  			if (i != argumentTypes.size() - 1)
	  				key += ", ";
	  		}
	  		return key + ")";
	    }

	    String makeRecieverkey(String currentActor, String senderName, String rcvrActor, String rcvrName, ArrayList<Type> argumentTypes){
	      if(rcvrActor == "self")
	        return makeKey(currentActor, rcvrName, argumentTypes);
	      else if(rcvrActor == "sender")
	        return makeKey(senderName, rcvrName, argumentTypes);
	      else
	        return makeKey(rcvrActor, rcvrName, argumentTypes);
	    }

	    SymbolTableItemReceiver checkRecieverExistance(String actrName, String senderName, String rcvrActor, String rcvrName, ArrayList<Type> argumentTypes, int line)
	    throws ReceiverDoseNotExistsException{
	      String key = makeRecieverkey(actrName, senderName, rcvrActor, rcvrName, argumentTypes);
	      return getRecieverFromSymTable(key, line);
	    }

	public ATalkPass2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<ActorContext> actor() {
			return getRuleContexts(ActorContext.class);
		}
		public ActorContext actor(int i) {
			return getRuleContext(ActorContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(ATalkPass2Parser.NL); }
		public TerminalNode NL(int i) {
			return getToken(ATalkPass2Parser.NL, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass2Listener ) ((ATalkPass2Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass2Listener ) ((ATalkPass2Listener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			        print("Pass2 started -------------------------");
			        beginScope();
			    
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==NL) {
				{
				setState(71);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(69);
					actor();
					}
					break;
				case NL:
					{
					setState(70);
					match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			        endScope();
			        print("Pass2 finished -------------------------");
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorContext extends ParserRuleContext {
		public Token actrName;
		public TerminalNode CONST_NUM() { return getToken(ATalkPass2Parser.CONST_NUM, 0); }
		public List<TerminalNode> NL() { return getTokens(ATalkPass2Parser.NL); }
		public TerminalNode NL(int i) {
			return getToken(ATalkPass2Parser.NL, i);
		}
		public TerminalNode ID() { return getToken(ATalkPass2Parser.ID, 0); }
		public TerminalNode EOF() { return getToken(ATalkPass2Parser.EOF, 0); }
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public List<ReceiverContext> receiver() {
			return getRuleContexts(ReceiverContext.class);
		}
		public ReceiverContext receiver(int i) {
			return getRuleContext(ReceiverContext.class,i);
		}
		public ActorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass2Listener ) ((ATalkPass2Listener)listener).enterActor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass2Listener ) ((ATalkPass2Listener)listener).exitActor(this);
		}
	}

	public final ActorContext actor() throws RecognitionException {
		ActorContext _localctx = new ActorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_actor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__0);
			setState(79);
			((ActorContext)_localctx).actrName = match(ID);
			setState(80);
			match(T__1);
			setState(81);
			match(CONST_NUM);
			setState(82);
			match(T__2);
			setState(83);
			match(NL);
			beginScope();
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__8) | (1L << T__11) | (1L << NL))) != 0)) {
				{
				setState(88);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__8:
				case T__11:
					{
					setState(85);
					state();
					}
					break;
				case T__5:
					{
					setState(86);
					receiver((((ActorContext)_localctx).actrName!=null?((ActorContext)_localctx).actrName.getText():null));
					}
					break;
				case NL:
					{
					setState(87);
					match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93);
			match(T__3);
			endScope();
			setState(95);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==NL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(ATalkPass2Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ATalkPass2Parser.ID, i);
		}
		public TerminalNode NL() { return getToken(ATalkPass2Parser.NL, 0); }
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass2Listener ) ((ATalkPass2Listener)listener).enterState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass2Listener ) ((ATalkPass2Listener)listener).exitState(this);
		}
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_state);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			type();
			setState(98);
			match(ID);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(99);
				match(T__4);
				setState(100);
				match(ID);
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
